--- a/storybook/.babelrc
+++ b/storybook/.babelrc
@@ -10,7 +10,6 @@
     ["@babel/plugin-proposal-optional-chaining", { "loose": false }],
     ["@babel/plugin-proposal-pipeline-operator", { "proposal": "minimal" }],
     ["@babel/plugin-proposal-nullish-coalescing-operator", { "loose": false }],
-    "@babel/plugin-proposal-do-expressions",
-    ["styled-components", { "useDisplayName": false }]
+    "@babel/plugin-proposal-do-expressions"
   ]
 }
