--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "simple-git": "^2.44.0",
     "styled-components": "^5.0.0",
     "svgo": "^2.3.0",
+    "typescript": "^4.5.2",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0",
     "xml2js": "^0.4.19",
